2008-10-14  Wakaba  <wakaba@suika.fam.cx>

	* Tokenizer.pm.src: Raise a parse error for XML "]]>" other than
	CDATA section end.

2008-10-14  Wakaba  <wakaba@suika.fam.cx>

	* Tokenizer.pm.src: Support for case-insensitive XML attribute
	names.

2008-10-14  Wakaba  <wakaba@suika.fam.cx>

	* Dumper.pm: Typo fixed.

2008-10-14  Wakaba  <wakaba@suika.fam.cx>

	* Dumper.pm: New module.

2008-10-14  Wakaba  <wakaba@suika.fam.cx>

	* Tokenizer.pm.src: Introduced "in_xml" flag for CDATA section
	support in XML.

2008-10-14  Wakaba  <wakaba@suika.fam.cx>

	* Tokenizer.pm.src: Make *_TOKEN (token type constants)
	exportable.  New token types, PI_TOKEN for XML and ABORT_TOKEN for
	document.write() or incremental parsing, are added for future
	extensions.

2008-10-14  Wakaba  <wakaba@suika.fam.cx>

	* Tokenizer.pm.src: New file.

2008-05-24  Wakaba  <wakaba@suika.fam.cx>

	* Serializer.pm (get_inner_html): Don't escape |"| in
	content (HTML5 revision 1592).

2008-05-24  Wakaba  <wakaba@suika.fam.cx>

	* Serializer.pm (get_inner_html): Append "\n" after the start
	tag of a |listing| element (HTML5 revision 1675).

2008-03-02  Wakaba  <wakaba@suika.fam.cx>

	* Serializer.pm (get_inner_html): Typo fixed.

2008-03-01  Wakaba  <wakaba@suika.fam.cx>

	* Serializer.pm (get_inner_html): Escape NBSP (HTML5 revision
	1277).

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* Serializer.pod: New file.

	* Makefile: New file.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* Serializer.pm: New module (split from ../HTML.pm.src).

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* ChangeLog: New file.
	
