@@ -1,6 +1,6 @@
 package Whatpm::HTML::Tokenizer;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.5 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.6 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 
 BEGIN {
   require Exporter;
@@ -1558,6 +1558,16 @@ sub _get_next_token ($) {
       } elsif ($self->{s_kwd} eq '[CDATA' and
                $self->{nc} == 0x005B) { # [
         !!!cp (135.2);
+
+        if ($self->{is_xml} and 
+            not $self->{tainted} and
+            @{$self->{open_elements} or []} == 0) {
+          !!!parse-error (type => 'cdata outside of root element',
+                          line => $self->{line_prev},
+                          column => $self->{column_prev} - 7);
+          $self->{tainted} = 1;
+        }
+
         $self->{ct} = {type => CHARACTER_TOKEN,
                                   data => '',
                                   line => $self->{line_prev},
@@ -2331,6 +2341,10 @@ sub _get_next_token ($) {
         !!!next-input-character;
         redo A;
       } elsif ($self->{nc} == -1) {
+        if ($self->{is_xml}) {
+          !!!parse-error (type => 'no mse'); ## TODO: type
+        }
+
         $self->{state} = DATA_STATE;
         $self->{s_kwd} = '';
         !!!next-input-character;
@@ -2771,4 +2785,4 @@ sub _get_next_token ($) {
 } # _get_next_token
 
 1;
-## $Date: 2008/10/14 14:38:59 $
+## $Date: 2008/10/14 14:57:52 $
