@@ -237,11 +237,11 @@ my $token; ## TODO: change to $self->{t}
 sub _construct_tree ($) {
   my ($self) = @_;
 
-  !!!next-token;
-
   delete $self->{tainted};
   $self->{open_elements} = [];
   $self->{insertion_mode} = INITIAL_IM;
+
+  !!!next-token;
   
   while (1) {
     if ($self->{insertion_mode} == IN_ELEMENT_IM) {
