@@ -1,5 +1,10 @@
 2008-10-14  Wakaba  <wakaba@suika.fam.cx>
 
+	* cdata-1.dat: Tests on CDATA section outside of the root element
+	added.
+
+2008-10-14  Wakaba  <wakaba@suika.fam.cx>
+
 	* doctypes-1.dat: Wrong results fixed.
 
 	* texts-1.dat: New test data file.
