@@ -1,5 +1,10 @@
 2008-10-14  Wakaba  <wakaba@suika.fam.cx>
 
+	* Tokenizer.pm.src: Parse error if CDATA section is not closed or
+	is placed outside of the root element.
+
+2008-10-14  Wakaba  <wakaba@suika.fam.cx>
+
 	* Tokenizer.pm.src: Raise a parse error for XML "]]>" other than
 	CDATA section end.
 
